# jupiter-arbitrage-bot-top-trending-token

./: .env  Cargo.toml  README.md  package.json
copy/: .env .env  .env.example  package-lock.json  package.json
copy/src/bot/: cache.js  getInitialotherAmountThreshold.js  index.js  setup.js
copy/src/utils/: index.js  jupiterApiClient.js  tokenFetcher.js  transaction.js
env-javascript/: .env.example  TROUBLESHOOTING.md  package.json
env-javascript-one/: config.json.sample  package-lock.json  package.json  package.json.backup
env-javascript-one/src/: index.js
env-javascript-one/src/bot/: index.js  setup.js
env-javascript-one/src/jupiter/: grpcClient.js  tokenFetcher.js  tokenWatcher.js
env-javascript-one/src/protos/: jupiter.proto
env-javascript-one/src/scripts/: startTokenWatcher.js
env-javascript/src/: index.js
env-javascript/src/bot/: index.js  (+1 more)
hundred-javascript/: .env.example
javascript/: package-lock.json
no-input/: .env.example  fix-rpc-websockets.js  package-lock.json  package.json
no-input/patches/: rpc-websockets+7.5.1.patch
no-input/src/: index.js
rust/: .gitignore  Cargo.toml  README.md  config.json
rust/src/: constants.rs  directory_structure  main.rs
rust/src/api/: jupiter.rs  mod.rs  token.rs
rust/src/arbitrage/: mod.rs
rust/src/bot/: cache.rs  exit.rs  jupiter.rs  setup.rs  swap.rs
rust/src/bot/ui/: hotkeys.rs  intro.rs  mod.rs
rust/src/config/: mod.rs
rust/src/models/: mod.rs
rust/src/utils/: mod.rs
src/: index.js
src/bot/: cache.js  getInitialotherAmountThreshold.js  swap.js
src/constants/: index.js
(+30 files in other folders)
