[package]
name = "solana-jupiter-bot-rust"
version = "0.1.72-beta-jupv4"
edition = "2021"
authors = "benjamintan1013@gmail.com"
license = "MIT"
description = "A Rust implementation of the Solana Jupiter Bot"

[dependencies]
# Solana dependencies
solana-sdk = "1.17"
solana-client = "1.17"
solana-program = "1.17"
solana-account-decoder = "1.17"

# Jupiter API clients
jup-ag = "0.4.0"
jupiter-swap-api-client = { git = "https://github.com/jup-ag/jupiter-swap-api-client.git" }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# CLI and UI
clap = { version = "4.4", features = ["derive"] }
colored = "2.1"
indicatif = "0.17"
console = "0.15"
crossterm = "0.27"

# Configuration and environment
config = "0.13"
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_qs = "0.13"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Other utilities
chrono = "0.4"
base64 = "0.22"
bincode = "1.3"
rust_decimal = "1.36" 